sas-core/main/default/objects/IRR_AutomatedNoHandBag__mdt/IRR_AutomatedNoHandBag__mdt.object-meta.xml
<CustomObject>
    <label>AutomatedNoHandBag</label>
    <pluralLabel>AutomatedNoHandBags</pluralLabel>
</CustomObject>