sas-core/main/default/objects/IRR_AutomatedNoHandBag__mdt/fields/IRR_Arrival_Country__c.field-meta.xml
<CustomField>
    <fullName>IRR_Arrival_Country__c</fullName>
    <label>Arrival Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>