sas-core/main/default/objects/IRR_AutomatedNoHandBag__mdt/fields/IRR_Duration__c.field-meta.xml
<CustomField>
    <fullName>IRR_Duration__c</fullName>
    <label>Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>