sas-core/main/default/objects/IRR_AutomatedNoHandBag__mdt/fields/IRR_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>IRR_Template_Name__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>